# andylinpersonal-esp32-c6-lp-core-freertos

main/ulp/: CMakeLists.txt  main.cpp
main/ulp/cmake/: ulp_tools.cmake
main/ulp/cxx/: pure.cpp  static_guard.cpp
main/ulp/freertos/config/: FreeRTOSConfig.h
main/ulp/freertos/cxx/: init.cpp
main/ulp/freertos/libc/: assert.c  malloc.c
main/ulp/freertos/lp_core/: lp_core_interrupt.c  lp_core_startup_wrapper.c
main/ulp/freertos/port/: port.c  portASM.S  portContext.h  portmacro.h
main/ulp/ld/: lp_core_riscv.ld
main/ulp/libc/: exit.c  premain.c  start.S  startup.c
